crates/builddiag-render/tests/snapshots/golden_tests__annotations_empty_findings.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: "annotations.join(\"\\n\")"
---

