crates/builddiag-render/tests/snapshots/golden_tests__markdown_empty_findings.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: md
---
## builddiag: ✅ Pass (0 errors, 0 warnings)

No findings.
