crates/builddiag-render/tests/snapshots/golden_tests__markdown_truncated.snap
---
source: crates/builddiag-render/tests/golden_tests.rs
expression: md
---
## builddiag: ❌ Fail (5 errors, 7 warnings)

| severity | check | code | location | message |
|---|---|---|---|---|
| error | test.bulk_check | finding_00 | src/module_0.rs:1 | Finding number 0 with detailed description |
| error | test.bulk_check | finding_01 | src/module_1.rs:11 | Finding number 1 with detailed description |
| error | test.bulk_check | finding_02 | src/module_2.rs:21 | Finding number 2 with detailed description |
| error | test.bulk_check | finding_03 | src/module_3.rs:31 | Finding number 3 with detailed description |
| error | test.bulk_check | finding_04 | src/module_4.rs:41 | Finding number 4 with detailed description |

*7 more findings truncated. See full report for details.*

Reproduce:
`builddiag check --root .`
